--- a/views/partials/rsvp.hbs
+++ b/views/partials/rsvp.hbs
@@ -35,7 +35,7 @@
 
                     <!-- Form Additional text -->
                     <p>We’re excited to see you! Any questions, just email us at:
-                        <a href="mailto:MatthewplusMallory@gmail.com">MatthewplusMallory@gmail.com</a></p>
+                        <a href="mailto:fabio.norata@gmail.com">fabio.norata@gmail.com</a></p>
                 </div>
             </div>
 
