Inserimento copy nostri

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -73,6 +73,7 @@
         <!-- CountDown JS -->
         <script type="text/javascript" src="{{js_path}}/jquery.plugin.min.js"></script>
         <script type="text/javascript" src="{{js_path}}/jquery.countdown.min.js"></script>
+        <script type="text/javascript" src="{{js_path}}/jquery.countdown-it.js"></script>
 
         <!-- ColorBox JS -->
         <script src="{{js_path}}/jquery.colorbox-min.js"></script>
