--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -4,7 +4,7 @@
     <div class="container">
 
         <!-- Thanks Text -->
-        <div class="thanks">Thanks for Visiting our Website</div>
+        <div class="thanks">Grazie per aver visitato il nostro sito</div>
         <div class="footer_txt">
 
             <!-- Social Buttons -->
