--- a/views/partials/gallery.hbs
+++ b/views/partials/gallery.hbs
@@ -1,6 +1,6 @@
 <!-- Gallery -->
 <section class="gallery" id="gallery">
-    <h2><span>Our</span> Gallery</h2>
+    <h2><span>Le </span> Foto</h2>
     <div class="gallery_wrapper">
       <!-- loop start -->
       {{#each gallery}}
