--- a/views/partials/gift.hbs
+++ b/views/partials/gift.hbs
@@ -1,18 +1,15 @@
 <!-- Gift Registry -->
 <section class="registry" id="registry">
     <div class="container">
-        <h2><span>Gift</span> Registry</h2>
-
-        <p>What we want most for our wedding is to have our friends and family there to celebrate the occasion with us. <br> So more than anything we’re simply grateful for your presence!</p>
-        <p>If you would like to get us something, we’d love that too...you can find our registries here:</p>
-
-        <!-- Logos & Links -->
-        <div class="registry_wrapper">
-            <a href="#"><img src="{{images_path}}/amazon.png" alt="Amazon"></a>
-            <a href="#"><img src="{{images_path}}/johnlewis.png" alt="JohnLewis"></a>
-            <a href="#"><img src="{{images_path}}/belk.png" alt="Belk"></a>
-            <a href="#"><img src="{{images_path}}/bedbathbeyond.png" alt="BedBathBeyond"></a>
-        </div>
+        <h2><span>Lista</span> Viaggio</h2>
+        
+        <p>
+        	Quello che vorremmo per il nostro matrimonio è avere i nostri amici e le nostre famiglie alla celebrazione della cerimonia.<br> 
+        	Quindi più di tutto vi saremo grati per la vostra presenza!
+        </p>
+		<p>Se voleste comunque farci un regalo, potreste aiutarci a rendere la nostra luna di miele indimenticabile dandoci supporto qui: </p>
+		<p>IBAN IT21Q0301503200000000000000 <br/> Intestato a Fabio Norata </p>
+		
     </div>
 </section>
 <!-- Gift Registry End -->
