--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -15,14 +15,14 @@
         <div class="menu_wrapper">
             <div class="sub_menu anim">
                 <ul>
-                    <li><a href="#our_story">Our Story</a></li>
-                    <li><a href="#guests">Our Bridal Party</a></li>
-                    <li><a href="#when_where">When & Where</a></li>
+                    <li><a href="#our_story">La nostra storia</a></li>
+                    <li><a href="#guests">I testimoni</a></li>
+                    <li><a href="#when_where">Dove & Quando</a></li>
                     <li><a href="#hotel">Hotel Reservation</a></li>
-                    <li><a href="#events">Our Events</a></li>
+                    <li><a href="#events">Roma da vedere</a></li>
                     <li><a href="#rsvp">RSVP</a></li>
-                    <li><a href="#gallery">Our Gallery</a></li>
-                    <li><a href="#registry">Gift Registry</a></li>
+                    <li><a href="#gallery">Le foto</a></li>
+                    <li><a href="#registry">Lista Viaggio</a></li>
                 </ul>
             </div>
             <div class="sub_img anim"></div>
