--- a/views/partials/rsvp.hbs
+++ b/views/partials/rsvp.hbs
@@ -1,7 +1,7 @@
 <!-- RSVP -->
 <section class="rsvp" id="rsvp">
     <div class="container">
-        <h2><span>Join</span> Our Party</h2>
+        <h2><span>Conferma</span> la tua presenza</h2>
 
         <div id="envelope" data-100-top="@class:active" data-200-bottom="@class: ">
             <div class="envelope_front">
@@ -14,27 +14,27 @@
             <div class="paper">
 
                 <!-- End Date of Reservation -->
-                <div class="paper_title">Please RSVP by August 2nd</div>
+                <div class="paper_title">RSVP entro 28 febbraio</div>
 
                 <!-- Form -->
                 <div id="div_block_1">
                     <div class="txt_input">
-                        <input type="text" class="form-control" id="name_block_1" placeholder="Your Name">
+                        <input type="text" class="form-control" id="name_block_1" placeholder="Nome">
                     </div>
                     <div class="txt_input">
-                        <input type="text" class="form-control" id="guest_block_1" placeholder="Your Guest's Name">
+                        <input type="text" class="form-control" id="guest_block_1" placeholder="Cognome">
                     </div>
                     <div class="txt_input">
-                        <input type="text" class="form-control" id="email_block_1" placeholder="Your E-mail">
+                        <input type="text" class="form-control" id="email_block_1" placeholder="E-mail">
                     </div>
                     <div class="txt_input">
-                        <input type="text" class="form-control" id="attending_block_1" placeholder="# Attending">
+                        <input type="text" class="form-control" id="attending_block_1" placeholder="# accompagnatori">
                     </div>
-                    <input name="" type="submit" value="Send" class="btn btn-lg submit_block_1">
+                    <input name="" type="submit" value="Invia" class="btn btn-lg submit_block_1">
 
 
                     <!-- Form Additional text -->
-                    <p>We’re excited to see you! Any questions, just email us at:
+                    <p>Siamo felici di sentivi! Per ogni domanda scriveteci a:
                         <a href="mailto:fabio.norata@gmail.com">fabio.norata@gmail.com</a></p>
                 </div>
             </div>
