--- a/views/partials/when_and_where.hbs
+++ b/views/partials/when_and_where.hbs
@@ -7,19 +7,19 @@
         <div class="photocamera"><span class="flaticon-slr2"></span></div>
 
         <div class="when_where_container opacity">
-            <h2><span>Where &amp;</span> When</h2>
+            <h2><span>Dove &amp;</span> Quando</h2>
 
             <!-- Texts -->
             <div class="pattern1"></div>
-            <div class="title1">The Historic</div>
-            <div class="title2">Roundhouse Depot</div>
-            <div class="title3"><a href="https://goo.gl/maps/dhx42" target="_blank">
-        320 Church Street <br />Huntsville, Alabama</a><br /><i class="flaticon-map35"></i> </div>
+            <div class="title1">Chiesa di</div>
+            <div class="title2">San Cesareo in Palatio</div>
+            <div class="title3"><a href="https://goo.gl/maps/FtEbDTBzUsR2" target="_blank">
+        	Via di Porta San Sebastiano <br />Roma</a><br /><i class="flaticon-map35"></i> </div>
 
             <div class="pattern2"></div>
-            <div class="title1">5 o'clock</div>
+            <div class="title1">16:00</div>
             <div class="title5">IN THE EVENING</div>
-            <div class="title4">September Nineteen<br>Two Thousand and Fifteen</div>
+            <div class="title4">Dieci Giugno <br>Duemiladiciassette</div>
             <div class="pattern3"></div>
         </div>
     </div>
