--- a/views/partials/events.hbs
+++ b/views/partials/events.hbs
@@ -1,6 +1,6 @@
 <!-- Events -->
 <section class="our_story events" id="events">
-    <h2><span>Our</span>  Events</h2>
+    <h2><span>Roma</span> da vedere</h2>
 
     <!-- Wrapper -->
     <div class="story_wrapper">
