--- a/views/partials/intro.hbs
+++ b/views/partials/intro.hbs
@@ -4,7 +4,7 @@
 
         <!-- Intro Text -->
 
-        <div class="title1 title1_2">Getting Married</div>
+        <div class="title1 title1_2">Ci Sposiamo</div>
         <div class="bullet"><span>{{formatDate wedding_date day="2-digit"}} <b>{{formatDate wedding_date month="2-digit"}}</b></span></div>
         <div class="title0">{{formatDate wedding_date year="numeric"}}</div>
         <a href="#married" class="intro_down"><span><i class="fa fa-angle-down"></i></span></a>
