--- a/views/partials/gift.hbs
+++ b/views/partials/gift.hbs
@@ -1,7 +1,7 @@
 <!-- Gift Registry -->
 <section class="registry" id="registry">
     <div class="container">
-        <h2><span>Lista</span> Viaggio</h2>
+        <h2>Lista Viaggio</h2>
         
         <p>
         	Quello che vorremmo per il nostro matrimonio è avere i nostri amici e le nostre famiglie alla celebrazione della cerimonia.<br> 
