--- a/views/partials/hotel.hbs
+++ b/views/partials/hotel.hbs
@@ -2,7 +2,7 @@
 <section class="hotel" id="hotel">
 
     <div class="container opacity">
-        <h2><span>Hotel</span> Reservation</h2>
+        <h2>Hotel Reservation</h2>
 
         <p>We have reserved a block of rooms at the: <b>Pointe Hilton Tapatio Cliffs Resort</b><br> For reservations, please call: 800.811.1111<br> Please mention you are a guest of the: Mallory & Matthew Wedding Group code: MM</p>
 
