--- a/views/partials/rsvp.hbs
+++ b/views/partials/rsvp.hbs
@@ -1,7 +1,7 @@
 <!-- RSVP -->
 <section class="rsvp" id="rsvp">
     <div class="container">
-        <h2><span>Conferma</span> la tua presenza</h2>
+        <h2>Conferma la tua presenza</h2>
 
         <div id="envelope" data-100-top="@class:active" data-200-bottom="@class: ">
             <div class="envelope_front">
@@ -22,7 +22,7 @@
                         <input type="text" class="form-control" id="name_block_1" placeholder="Nome">
                     </div>
                     <div class="txt_input">
-                        <input type="text" class="form-control" id="guest_block_1" placeholder="Cognome">
+                        <input type="text" class="form-control" id="surname_block_1" placeholder="Cognome">
                     </div>
                     <div class="txt_input">
                         <input type="text" class="form-control" id="email_block_1" placeholder="E-mail">
@@ -30,12 +30,15 @@
                     <div class="txt_input">
                         <input type="text" class="form-control" id="attending_block_1" placeholder="# accompagnatori">
                     </div>
+                    <div class="">
+                        <textarea class="form-control" id="note_block_1" placeholder="Intolleranze o altro"></textarea>
+                    </div>
                     <input name="" type="submit" value="Invia" class="btn btn-lg submit_block_1">
 
 
                     <!-- Form Additional text -->
                     <p>Siamo felici di sentivi! Per ogni domanda scriveteci a:
-                        <a href="mailto:fabio.norata@gmail.com">fabio.norata@gmail.com</a></p>
+                        <a href="mailto:info@lasposoancheseceliaca.com">info@lasposoancheseceliaca.com</a></p>
                 </div>
             </div>
 
