--- a/views/partials/story.hbs
+++ b/views/partials/story.hbs
@@ -1,6 +1,6 @@
 <!-- Story -->
 <section class="our_story" id="our_story">
-    <h2><span>La</span>  Nostra Storia</h2>
+    <h2>La Nostra Storia</h2>
 
     <!-- Wrapper -->
     <div class="story_wrapper">
