--- a/views/partials/when_and_where.hbs
+++ b/views/partials/when_and_where.hbs
@@ -7,7 +7,7 @@
         <div class="photocamera"><span class="flaticon-slr2"></span></div>
 
         <div class="when_where_container opacity">
-            <h2><span>Dove &amp;</span> Quando</h2>
+            <h2>Dove &amp; Quando</h2>
 
             <!-- Texts -->
             <div class="pattern1"></div>
