--- a/views/partials/guests.hbs
+++ b/views/partials/guests.hbs
@@ -1,7 +1,7 @@
 <!-- The Crew -->
 <section class="guests" id="guests">
     <div class="container">
-        <h2><span>I</span> Testimoni</h2>
+        <h2>I Testimoni</h2>
 
         <!-- Guest Wrapper -->
         <div class="guest_wrapper">
