--- a/views/partials/when_and_where.hbs
+++ b/views/partials/when_and_where.hbs
@@ -1,5 +1,5 @@
 <!-- When & Where -->
-<section class="when_where white_txt parallax" id="when_where" data-image="{{images_path}}/{{color_theme}}/back5.jpg" data-bottom-top="opacity:0;" data-bottom="opacity:1;">
+<section class="when_where white_txt parallax" id="when_where" data-image="{{images_path}}/chiesa_1.jpg" data-bottom-top="opacity:0;" data-bottom="opacity:1;">
     <div class="over"></div>
     <div class="container">
 
@@ -18,8 +18,8 @@
 
             <div class="pattern2"></div>
             <div class="title1">16:00</div>
-            <div class="title5">IN THE EVENING</div>
-            <div class="title4">Dieci Giugno <br>Duemiladiciassette</div>
+            <!--div class="title5">IN THE EVENING</div-->
+            <div class="title4">10 Giugno 2017</div>
             <div class="pattern3"></div>
         </div>
     </div>
