Social updated (only fb on hashtag)

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -17,7 +17,7 @@
                 <ul>
                     <li><a href="#our_story">La nostra storia</a></li>
                     <li><a href="#guests">I testimoni</a></li>
-                    <li><a href="#when_where">Dove & Quando</a></li>
+                    <li><a href="#when_where">Dove &amp; Quando</a></li>
                     <li><a href="#hotel">Hotel Reservation</a></li>
                     <li><a href="#events">Roma da vedere</a></li>
                     <li><a href="#rsvp">RSVP</a></li>
@@ -32,9 +32,9 @@
 
     <!-- Social Buttons -->
     <div class="header_social">
-        <a href="#"><i class="fa fa-twitter"></i></a>
-        <a href="#"><i class="fa fa-facebook"></i></a>
-        <a href="#"><i class="fa fa-pinterest"></i></a>
+        <!--a href="#"><i class="fa fa-twitter"></i></a-->
+        <a href="https://www.facebook.com/hashtag/lasposoancheseceliaca" target="_blank"><i class="fa fa-facebook"></i></a>
+        <!--a href="#"><i class="fa fa-pinterest"></i></a-->
     </div>
 
 </header>
