Custom css and contents, Fix menu bug

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -12,6 +12,8 @@
     <link href="{{css_path}}/bootstrap-theme.css" rel="stylesheet">
     <!-- Font Awesome CSS -->
     <link href="{{css_path}}/font-awesome.min.css" rel="stylesheet">
+    <!-- Font Vanilla Daisy Pro CSS -->
+    <link href="{{css_path}}/vanilla-daisy-pro.min.css" rel="stylesheet">
     <!-- Flaticon CSS -->
     <link href="{{css_path}}/flaticon/flaticon.css" rel="stylesheet">
     <!-- Owl Carousel CSS -->
@@ -26,6 +28,7 @@
     <link href="{{css_path}}/{{color_theme}}.css" rel="stylesheet">
 
     <!-- Google Fonts -->
+    <link href="//fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type="text/css" />
     <link href='//fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
     <link href='//fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700' rel='stylesheet' type='text/css'>
 
