--- a/views/partials/hotel.hbs
+++ b/views/partials/hotel.hbs
@@ -3,11 +3,11 @@
 
     <div class="container opacity">
         <h2>Hotel Reservation</h2>
+ 		
+ 		<p>Abbiamo riservato un blocco di camere all'<b><a href="http://www.hotelarearoma.it" target="_blank">Hotel Area Roma</a></b><br> Per prenotare, chiamare: <a href="tel:065943183">065943183</a><br> Riferisci che sei un ospite del matrimonio di Elena & Fabio Group code: EF</p>
 
-        <p>We have reserved a block of rooms at the: <b>Pointe Hilton Tapatio Cliffs Resort</b><br> For reservations, please call: 800.811.1111<br> Please mention you are a guest of the: Mallory & Matthew Wedding Group code: MM</p>
-
-        <p>To ensure room availability, please RSVP prior to: <b>september 10, 2015</b><br> If you have any questions, feel free to email us at:
-            <a href="mailto:MatthewplusMallory@gmail.com">MatthewplusMallory@gmail.com</a></p>
+        <p>Per essere sicuro di trovar posto, contattali il prima possibile<br> Se hai domande, sentiti libero di contattarli:
+        <a href="mailto:info@hotelarearoma.it">info@hotelarearoma.it</a></p>
 
     </div>
 </section>
