--- a/views/partials/married.hbs
+++ b/views/partials/married.hbs
@@ -9,7 +9,7 @@
         </div>
 
         <div class="married_txt" data-bottom="opacity:0" data-center="opacity:1">
-            <h2><span>Sei</span> Invitato</h2> il 10 Giugno 2017<br>
+            <h2>Sei invitato</h2> il 10 Giugno 2017<br>
             <b>Fabio Norata & Elena Pisano</b><br> si sposano a Roma.<br>
             <a href="#rsvp" class="btn go">RSVP</a>
 
