--- a/views/partials/rsvp.hbs
+++ b/views/partials/rsvp.hbs
@@ -37,7 +37,7 @@
 
 
                     <!-- Form Additional text -->
-                    <p>Siamo felici di sentivi! Per ogni domanda scriveteci a:
+                    <p>Siamo felici di sentirvi! Per ogni domanda scriveteci a:
                         <a href="mailto:info@lasposoancheseceliaca.com">info@lasposoancheseceliaca.com</a></p>
                 </div>
             </div>
