--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -9,9 +9,9 @@
 
             <!-- Social Buttons -->
             <div class="footer_social">
-                <a href="#"><i class="fa fa-twitter"></i></a>
+                <!-- <a href="#"><i class="fa fa-twitter"></i></a> -->
                 <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-pinterest"></i></a>
+                <!-- <a href="#"><i class="fa fa-pinterest"></i></a> -->
             </div>
 
             <div class="title1">{{title}}</div>
