--- a/views/partials/gift.hbs
+++ b/views/partials/gift.hbs
@@ -8,7 +8,7 @@
         	Quindi più di tutto vi saremo grati per la vostra presenza!
         </p>
 		<p>Se voleste comunque farci un regalo, potreste aiutarci a rendere la nostra luna di miele indimenticabile dandoci supporto qui: </p>
-		<p>IBAN IT32Q0558401795000000004126 <br/> Intestato a Fabio Norata </p>
+		<p>IBAN IT32Q0558401795000000004126 <br/> Intestato a Fabio Norata <br/> Causale: Viaggio di nozze </p>
 		
     </div>
 </section>
