Added texts and other photoes

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -56,8 +56,10 @@
         {{> when_and_where}}
         
         {{> location}}
+        
+        {{> hotel_reservation}}
 
-        {{> hotel}}
+        {{!-- {{> hotel}} --}}
 
         {{#if events}}
           {{> events}}
