--- a/views/partials/hotel.hbs
+++ b/views/partials/hotel.hbs
@@ -4,7 +4,7 @@
     <div class="container opacity">
         <h2>Hotel Reservation</h2>
  		
- 		<p>Abbiamo riservato un blocco di camere all'<b><a href="http://www.hotelarearoma.it" target="_blank">Hotel Area Roma</a></b><br> Per prenotare, chiamare: <a href="tel:065943183">065943183</a><br> Riferisci che sei un ospite del matrimonio di Elena & Fabio Group code: EF</p>
+ 		<p>Abbiamo riservato un blocco di camere all'<b><a href="http://www.hotelarearoma.it" target="_blank">Hotel Area Roma</a></b><br> Per prenotare, chiamare: <a href="tel:065943183">065943183</a><br> Riferisci che sei un ospite del matrimonio di Elena & Fabio.</p>
 
         <p>Per essere sicuro di trovar posto, contattali il prima possibile<br> Se hai domande, sentiti libero di contattarli:
         <a href="mailto:info@hotelarearoma.it">info@hotelarearoma.it</a></p>
