--- a/views/partials/hotel_reservation.hbs
+++ b/views/partials/hotel_reservation.hbs
@@ -1,5 +1,5 @@
 <!-- Location -->
-<section class="when_where white_txt parallax" id="location" data-image="{{images_path}}/hotel-area-roma.jpg" data-bottom-top="opacity:0;" data-bottom="opacity:1;">
+<section class="when_where white_txt parallax" id="location" data-image="{{images_path}}/hotels.jpg" data-bottom-top="opacity:0;" data-bottom="opacity:1;">
     <div class="over"></div>
     <div class="container">
 
@@ -11,14 +11,17 @@
 
             <!-- Texts -->
             <div class="pattern1"></div>
-            <!-- <div class="title1"></div> -->
-            <div class="title2"><a href="http://www.hotelarearoma.it" target="_blank">Hotel Area Roma</a></div>
-            <div class="title3"><a href="http://www.hotelarearoma.it/mappa-interattiva/" target="_blank">
-        	Via del Forte Ostiense, 21,<br />Roma</a><br /><i class="flaticon-map35"></i> 
+        	<div>
+        		Se avete bisogno di un’alloggio potete contattare i seguenti alberghi.<br/>
+        		Comunicando loro che siete invitati del matrimonio di Fabio Norata ed Elena Pisano, usufruirete di una particolare agevolazione.
         	</div>
-        	<div class="pattern2"></div>
-        	<div>Abbiamo riservato un blocco di camere. Per prenotare, chiamare: <b><a href="tel:+39065943183">+39 06 594 3183</a></b><br/>
-			Riferisci che sei un ospite del matrimonio di Elena & Fabio.</div>
+            <div class="pattern2"></div>
+            <!-- <div class="title1"></div> -->
+            <!-- <div class="title2"><a href="http://www.hotelarearoma.it" target="_blank">Hotel Area Roma</a></div> -->
+            <div class="title2"><a href="http://www.hotelsanpaoloroma.com/tablet.php" target="_blank">Hotel San Paolo Roma</a></div>
+            <div class="title2"><a href="http://www.ibisstylesromaeur.it/" target="_blank">Ibis Styles Roma EUR</a></div>
+            <div class="title2"><a href="http://www.accorhotels.com/it/hotel-9299-novotel-roma-eur/index.shtml" target="_blank">Novotel Roma EUR</a></div>
+            
             <div class="pattern3"></div>
         </div>
     </div>
