--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -10,7 +10,7 @@
             <!-- Social Buttons -->
             <div class="footer_social">
                 <!-- <a href="#"><i class="fa fa-twitter"></i></a> -->
-                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="https://www.facebook.com/groups/lasposoancheseceliaca/" target="_blank"><i class="fa fa-facebook"></i></a>
                 <!-- <a href="#"><i class="fa fa-pinterest"></i></a> -->
             </div>
 
