--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -33,7 +33,8 @@
     <!-- Social Buttons -->
     <div class="header_social">
         <!--a href="#"><i class="fa fa-twitter"></i></a-->
-        <a href="https://www.facebook.com/hashtag/lasposoancheseceliaca" target="_blank"><i class="fa fa-facebook"></i></a>
+        <!-- <a href="https://www.facebook.com/hashtag/lasposoancheseceliaca" target="_blank"><i class="fa fa-facebook"></i></a> -->
+        <a href="https://www.facebook.com/groups/lasposoancheseceliaca/" target="_blank"><i class="fa fa-facebook"></i></a>
         <!--a href="#"><i class="fa fa-pinterest"></i></a-->
     </div>
 
