Added fb meta description

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -9,7 +9,7 @@
 	<meta property="og:type"		content="website" />
 	<meta property="og:title"		content="{{title}}" />
 	<meta property="og:site_name" content="La sposo anche se celiaca"/>
-	<meta property="og:description"	content="How much does culture influence creative thinking?" />
+	<meta property="og:description"	content="Il 10 Giugno 2017 Fabio & Elena si sposano a Roma" />
 	<meta property="og:image"		content="http://lasposoancheseceliaca.com/dist/images/my-custom-style/back.jpg" />
 	<meta property="og:locale"		content="it_IT" />
 	<link rel="canonical" href="http://lasposoancheseceliaca.com" />
