--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,12 +5,12 @@
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:url"			content="http://lasposoancheseceliaca.com" />
+    <meta property="og:url"			content="http://www.lasposoancheseceliaca.com" />
 	<meta property="og:type"		content="website" />
 	<meta property="og:title"		content="{{title}}" />
 	<meta property="og:site_name" content="La sposo anche se celiaca"/>
 	<meta property="og:description"	content="Il 10 Giugno 2017 Fabio & Elena si sposano a Roma" />
-	<meta property="og:image"		content="http://lasposoancheseceliaca.com/dist/images/my-custom-style/back.jpg" />
+	<meta property="og:image"		content="http://www.lasposoancheseceliaca.com/dist/images/my-custom-style/back.jpg" />
 	<meta property="og:locale"		content="it_IT" />
 	<link rel="canonical" href="http://lasposoancheseceliaca.com" />
 	
