--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -10,9 +10,9 @@
 	<meta property="og:title"		content="{{title}}" />
 	<meta property="og:site_name" content="La sposo anche se celiaca"/>
 	<meta property="og:description"	content="Il 10 Giugno 2017 Fabio & Elena si sposano a Roma" />
-	<meta property="og:image"		content="http://www.lasposoancheseceliaca.com/dist/images/my-custom-style/back.jpg" />
+	<meta property="og:image"		content="http://www.lasposoancheseceliaca.com/dist/images/lasposoancheseceliaca.jpg" />
 	<meta property="og:locale"		content="it_IT" />
-	<link rel="canonical" href="http://lasposoancheseceliaca.com" />
+	<link rel="canonical" href="http://www.lasposoancheseceliaca.com" />
 	
     <title>{{title}}</title>
 
