--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -9,7 +9,7 @@
 	<meta property="og:type"		content="website" />
 	<meta property="og:title"		content="{{title}}" />
 	<meta property="og:site_name" content="La sposo anche se celiaca"/>
-	<meta property="og:description"	content="Il 10 Giugno 2017 ci sposano a Roma." />
+	<meta property="og:description"	content="Il 10 Giugno 2017 si sposano a Roma." />
 	<meta property="og:image"		content="http://www.lasposoancheseceliaca.com/dist/images/lasposoancheseceliaca.jpg" />
 	<meta property="og:locale"		content="it_IT" />
 	<link rel="canonical" href="http://www.lasposoancheseceliaca.com" />
