--- a/views/partials/gift.hbs
+++ b/views/partials/gift.hbs
@@ -4,7 +4,7 @@
         <h2>Lista Viaggio</h2>
         
         <p>
-        	Quello che vorremmo per il nostro matrimonio è avere i nostri amici e le nostre famiglie alla celebrazione della cerimonia.<br> 
+        	Quello che vorremmo per questo importante giorno è avere i nostri amici e le nostre famiglie alla celebrazione del matrimonio.<br> 
         	Quindi più di tutto vi saremo grati per la vostra presenza!
         </p>
 		<p>Se voleste comunque farci un regalo, potreste aiutarci a rendere la nostra luna di miele indimenticabile dandoci supporto qui: </p>
