fix accompagnatore not required

--- a/views/partials/rsvp.hbs
+++ b/views/partials/rsvp.hbs
@@ -31,7 +31,7 @@
 		                        <input type="email" autocomplete="on" class="form-control" id="email_block_1" placeholder="E-mail" required>
 		                    </div>
 		                    <div class="txt_input">
-		                        <input type="text" class="form-control" id="attending_block_1" placeholder="# accompagnatori" required pattern="\d+">
+		                        <input type="text" class="form-control" id="attending_block_1" placeholder="# accompagnatori" pattern="\d+">
 		                    </div>
 		                    <div class="">
 		                        <textarea class="form-control" id="note_block_1" placeholder="Intolleranze o altro"></textarea>
