--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -2,6 +2,7 @@
 <html lang="{{@intl.locales}}">
 
 <head>
+	
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,6 +16,14 @@
 	<link rel="canonical" href="http://www.lasposoancheseceliaca.com" />
 	
     <title>{{title}}</title>
+
+	<!-- Google Tag Manager -->
+	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-P389XPR');</script>
+	<!-- End Google Tag Manager -->
 
     <!-- Bootstrap CSS -->
     <link href="{{css_path}}/bootstrap.css" rel="stylesheet">
@@ -44,7 +53,10 @@
 </head>
 
 <body>
-
+	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P389XPR"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
 
     {{> header}}
 
@@ -116,7 +128,16 @@
         </script>
 
     </div>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-92893908-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </body>
 
 
