--- a/views/partials/hotel_reservation.hbs
+++ b/views/partials/hotel_reservation.hbs
@@ -1,5 +1,5 @@
 <!-- Location -->
-<section class="when_where white_txt parallax" id="location" data-image="{{images_path}}/hotels.jpg" data-bottom-top="opacity:0;" data-bottom="opacity:1;">
+<section class="hotel_reservation when_where white_txt parallax" id="hotel_reservation" data-image="{{images_path}}/hotels.jpg" data-bottom-top="opacity:0;" data-bottom="opacity:1;">
     <div class="over"></div>
     <div class="container">
 
