--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -16,7 +16,10 @@
 	<link rel="canonical" href="http://www.lasposoancheseceliaca.com" />
 	
     <title>{{title}}</title>
-
+	
+	<script>
+	  dataLayer = [];
+	</script>
 	<!-- Google Tag Manager -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -24,6 +27,7 @@
 	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 	})(window,document,'script','dataLayer','GTM-P389XPR');</script>
 	<!-- End Google Tag Manager -->
+
 
     <!-- Bootstrap CSS -->
     <link href="{{css_path}}/bootstrap.css" rel="stylesheet">
