--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -132,8 +132,8 @@
           	{{formatDate wedding_date year="numeric"}},
           	{{formatDate wedding_date month="numeric"}}-1,
           	{{formatDate wedding_date day="numeric"}},
-          	{{formatDate wedding_date hour="numeric"}},
-          	{{formatDate wedding_date minute="numeric"}}
+          	{{formatDate wedding_date hour="2-digit"}},
+          	{{formatDate wedding_date minute="2-digit"}}
           	)});
         </script>
 
