--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -126,7 +126,7 @@
         <script src="{{js_path}}/jquery.firefly-0.3-min.js"></script>
         <!-- Theme JS -->
         <script src="{{js_path}}/script.js"></script>
-        <script type="">
+        <script type="text/javascript">
           /*CountDown*/
           $('.married_coundown').countdown({until: new Date(
           	{{formatDate wedding_date year="numeric"}},
