--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -18,11 +18,12 @@
                     <li><a href="#our_story">La nostra storia</a></li>
                     <li><a href="#guests">I testimoni</a></li>
                     <li><a href="#when_where">Dove &amp; Quando</a></li>
-                    <li><a href="#hotel_reservation">Hotel Reservation</a></li>
+                    {{!-- <li><a href="#hotel_reservation">Hotel Reservation</a></li> --}}
                     {{!-- <li><a href="#rsvp">RSVP</a></li> --}}
                     <li><a href="#gallery">Le foto</a></li>
-                    <li><a href="#registry">Lista Viaggio</a></li>
+                    {{!-- <li><a href="#registry">Lista Viaggio</a></li> --}}
                     <li><a href="#events">Roma da vedere</a></li>
+                    <li><a href="#gallery-matrimonio">Foto matrimonio</a></li>
                 </ul>
             </div>
             <div class="sub_img anim"></div>
